# mosh

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD_WIN.md  COPYING.iOS  ChangeLog  Dockerfile  Makefile  Makefile.am  NEWS  README  README.WINDOWS  README.md  SPANISHREADME.md  THANKS  TODO  Testing  ae.hpp  appveyor.sh  appveyor.yml  autogen.sh  base64.h  build-package.sh  build-source-package.sh  completeterminal.cpp  completeterminal.hpp  configure.ac  crypto.cpp  crypto.hpp  decrypt.cpp  dos_assert.hpp  encrypt.cpp  grant.htm  keystroke.cpp  keystroke.hpp  mm  (+54 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  cifuzz.yml  clang-format.yml  release.yml
centos/: mosh.spec
conf/: Makefile.am
conf/bash-completion/completions/: mosh
conf/bash_completion.d/: mosh
conf/ufw/applications.d/: mosh
debian/: changelog  control  copyright  docs  mosh.maintscript  package.bash-completion  rules  watch
debian/patches/: 0001-Fix-Debian-GCC7-FTBFS-remove-default-constructors.patch  0001-Fix-gcc8-snprintf-truncation-warning.patch  series
dockerfiles/: Dockerfile  Dockerfile.gentoo  Dockerfile.ubuntu
examples/: decrypt.cpp  encrypt.cpp  ntester.cpp  parse.cpp  termemu.cpp
fedora/: mosh.spec  weepee-mosh.spec
m4/: ax_check_library.m4  ax_code_coverage.m4  ax_with_curses.m4
macosx/: .gitignore  Distribution.in  brew-deps.sh  build.sh  copying.rtf  gtar  osx-xcode.sh  port-deps.sh  readme.rtf
macosx/mosh-1.2.4-3.pkg/: Distribution
macosx/mosh-1.2.4-3.pkg/prefix.pkg/: Bom  PackageInfo
macosx/mosh-package.pmdoc.in/: 01prefix-contents.xml  01prefix.xml  index.xml
man/: Makefile.am  mosh-client.1  mosh-server.1  mosh.1
protobufs/: Makefile.am
rpm/: mosh.spec
scripts/: Makefile.am  mosh  mosh.pl  ssh-mosh  wrap-compiler-for-flag-check
slackware/: Slackware.README
snap/: snapcraft.yaml
src/: Makefile.am  completeterminal.cpp  completeterminal.hpp  crypto.cc  crypto.cpp  dos_assert.h  dos_assert.hpp  mosh-client.cpp  mosh-server.cc  mosh-server.cpp  network.hpp  networktransport.cc  networktransport.cpp  ocb.cc  ocb.cpp  parser.cpp  parser.h  parseraction.h  parserstate.cpp  parserstatefamily.h  parserstatefamily.hpp  rijndael-alg-fst.cc  stmclient.cc  stmclient.cpp  stmclient.hpp  terminal.h  terminal.hpp  terminaldispatcher.cc  terminaldispatcher.h  terminaldisplay.h  terminaldisplay.hpp  terminalframebuffer.cpp  terminalframebuffer.hpp  terminalfunctions.cc  terminalfunctions.cpp  terminaloverlay.cpp  terminaloverlay.h  terminaluserinput.cc  terminaluserinput.cpp  terminaluserinput.h  (+4 more)
src/agent/: Makefile.am  agent.cc  agent.h
src/crypto/: Makefile.am  ae.h  base64.cc  base64.h  byteorder.h  crypto.cc  crypto.h  ocb.cc  ocb_internal.cc  ocb_openssl.cc  prng.h
src/examples/: .gitignore  Makefile.am  benchmark.cc  decrypt.cc  encrypt.cc  ntester.cc  parse.cc  termemu.cc
src/frontend/: .gitignore  Makefile.am  mosh-client.cc  mosh-server.cc  mosh.cc  stmclient.cc  stmclient.h  terminaloverlay.cc  terminaloverlay.h  tncon.cc  tncon.h
src/fuzz/: Makefile.am  terminal_fuzzer.cc  terminal_parser_fuzzer.cc
src/include/: Makefile.am
src/network/: Makefile.am  compressor.cc  compressor.h  network.cc  network.h  network_windows.h  networktransport-impl.h  networktransport.cc  networktransport.h  outofband.cc  outofband.h  transportfragment.cc  transportfragment.h  transportsender-impl.h  transportsender.cc  transportsender.h  transportstate.h
src/protobufs/: Makefile.am  agent.proto  hostinput.proto  oob.proto  stream.proto  transportinstruction.proto  userinput.proto
src/statesync/: Makefile.am  completeterminal.cc  completeterminal.h  multiplexer.cc  multiplexer.h  stream.h  user.cc  user.h
src/terminal/: Makefile.am  parser.cc  parser.h  parseraction.cc  parseraction.h  parserstate.cc  parserstate.h  parserstatefamily.h  parsertransition.h  terminal.cc  terminal.h  terminaldispatcher.cc  terminaldispatcher.h  terminaldisplay.cc  terminaldisplay.h  terminaldisplayinit.cc  terminalframebuffer.cc  terminalframebuffer.h  terminalfunctions.cc  terminaluserinput.cc  terminaluserinput.h
src/tests/: .gitignore  Makefile.am  README.md  base64.cc  base64_vector.h  display  display-server-harness  e2e-failure.test  e2e-success.test  e2e-test  e2e-test-server  e2e-test-subrs  emulation-80th-column.test  emulation-ascii-iso-8859.test  emulation-attributes-vt100.test  emulation-attributes.test  emulation-back-tab.test  emulation-cursor-motion.test  emulation-cursor-shape.test  emulation-multiline-scroll.test  emulation-osc7.test  emulation-scroll.test  emulation-wrap-across-frames.test  emulation-xda.test  encrypt-decrypt.cc  genbase64.pl  hold-stdin  hold-stdin.cc  inpty.cc  is-utf8-locale.cc  local.test  mosh-client  network-no-diff.test  nonce-incr.cc  ocb-aes.cc  prediction-unicode.test  print-exitstatus  pty-deadlock.test  render-test  render-test-server-harness  (+16 more)
src/unicode/: Makefile.am  edit_widths.py  make_widths.py
src/util/: Makefile.am  char_utils.h  chwidth.cc  chwidth.h  chwidth_tables.cc  coe.c  dos_assert.h  fatal_assert.h  fd_close.c  fd_read.c  fd_write.c  locale_utils.cc  locale_utils.h  ndelay_on.c  pipe_internal.c  pty_compat.cc  pty_compat.h  sanitize_read.c  select.cc  select.h  selfpipe-internal.h  selfpipe.h  selfpipe_finish.c  selfpipe_init.c  selfpipe_internal.c  selfpipe_read.c  selfpipe_trap.c  selfpipe_trapset.c  selfpipe_untrap.c  shared.h  sig_restoreto.c  sigfd.cc  sigfd.h  skasig_dfl.c  skasigaction.c  stdfds.cc  stdfds.h  swrite.cc  swrite.h  timestamp.cc  (+4 more)
src/windows/: Makefile.am  pty_windows.cc  pty_windows.h  select_windows.cc  select_windows.h  signal_windows.cc  signal_windows.h
third/: Makefile.am
third/libstddjb/: COPYING  Makefile.am  allreadwrite.h  coe.c  djbunix.h  error.h  fd_write.c  gccattributes.h  nsig.h  pipe_internal.c  sanitize_read.c  selfpipe.h  selfpipe_finish.c  selfpipe_read.c  sig.h  skasig_dfl.c  skasigaction.c  sysdeps.h  uint64.h
third/poll/: LICENSE  Makefile.am  poll.c  poll.h
(+1 files in other folders)
